# kaitj.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  Gemfile  README.md  _config.yml  about.html  contact.html  index.html  next.config.js  package-lock.json  package.json  projects.html  publications.html
.github/: dependabot.yml
_data/: navigation.yml
_includes/: scripts.html
_pages/: 404.md  about.md  blog.md  contact.md  publications.md  talks.md
_posts/: 2019-01-01-helloworld.md  2019-01-08-nyresolutions.md  2019-01-15-winterterm2019.md  2019-01-22-winterishere.md  2019-01-29-webdev.md  2019-02-05-janreview.md  2019-02-18-longweekend.md  2019-02-26-febreview.md
assets/: profile.json  publications.json
backend/: README.md  pyproject.toml
backend/src/get_publications/: __init__.py  run.py
components/: contact.tsx  footer.tsx  navbar.tsx  profile.tsx  projects.tsx  publications.tsx  social.tsx  socials.tsx
css/: portfolio-custom.css  portfolio-lg.css  portfolio-md.css  portfolio-sm.css  portfolio-xl.css  portfolio-xs.css  portfolio-xxl.css  portfolio.css
data/: projects.ts  publications.ts
frontend/: package-lock.json  package.json  svelte.config.js
interfaces/: navigations.ts  projects.ts  publications.ts
js/: custom.js
pages/: _app.tsx  about.tsx  contact.tsx  index.tsx  projects.tsx  publications.tsx
src/: app.css
static/: projects.json  publications.json
styles/: Home.module.css  _variables.scss  contact.module.css  globals.css  home.module.css  projects.module.css  publications.module.css  socials.module.css
(+253 files in other folders)
